--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: patient
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -9,16 +9,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter
+  intl: any
 
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.0
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   http: ^0.13.5
   json_annotation: ^4.7.0
   flutter_riverpod: ^2.1.2
   cloud_firestore: ^4.3.0
   location: ^4.4.0
   firebase_auth: ^4.2.3
+  equatable: ^2.0.5
+  dartz: ^0.10.1
+  auto_route: ^5.0.4
+  hive_flutter: ^1.1.0
+  firebase_messaging: ^14.2.5
+  flutter_local_notifications: ^13.0.0
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +37,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.5.4
   build_runner: ^2.1.10
+  freezed: ^2.3.2
+  auto_route_generator: ^5.0.3
 
 flutter:
   generate: true
